--- a/bin/application.properties
+++ b/bin/application.properties
@@ -2,5 +2,5 @@ EMPLOYEE_ID_LENGTH=9
 DB_ON=MYSQL
 DB_DRIVER =com.mysql.jdbc.Driver
 URL =jdbc:mysql://localhost:3306/xav_db
-USERNAME =root
+USERNAME1 =root
 PASSWORD =root
