--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,32 @@ DB_DRIVER =com.mysql.jdbc.Driver
 URL =jdbc:mysql://localhost:3306/xav_db
 USERNAME1 =root
 PASSWORD =root
+
+management.port=8081
+management.context-path=/details
+management.security.enabled=true
+
+security.basic.enabled=true
+security.user.name=admin
+security.user.password=admin
+
+endpoints.info.id=info
+endpoints.info.sensitive=true
+endpoints.info.enabled=true
+
+
+endpoints.health.id=health
+endpoints.health.sensitive=true
+endpoints.health.enabled=true
+
+endpoints.metrics.id=metrics
+endpoints.metrics.sensitive=true
+endpoints.metrics.enabled=true
+
+endpoints.server.id=server
+endpoints.server.sensitive=false
+endpoints.server.enabled=true
+
+info.app.name=Employee Service
+info.app.description=Employee Details CRUD Operation
+info.app.version=0.0.1-SNAPSHOT
