--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,11 +13,6 @@ security.basic.enabled=true
 security.user.name=admin
 security.user.password=admin
 
-endpoints.info.id=info
-endpoints.info.sensitive=true
-endpoints.info.enabled=true
-
-
 endpoints.health.id=health
 endpoints.health.sensitive=true
 endpoints.health.enabled=true
@@ -30,6 +25,9 @@ endpoints.server.id=server
 endpoints.server.sensitive=false
 endpoints.server.enabled=true
 
+endpoints.info.id=info
+endpoints.info.sensitive=false
+endpoints.info.enabled=true
 info.app.name=Employee Service
 info.app.description=Employee Details CRUD Operation
 info.app.version=0.0.1-SNAPSHOT
